# glsl_helper

./: CMakeLists.txt  README.md  main.cpp
include/: ast.hpp  defs.h  glsl.hpp  tokenizer.hpp
shaders/: fragment.frag  lamp.vert  multiple_lights.frag  simple.frag  vertex.vert
src/: ast.cpp  glsl.cpp  tokenizer.cpp
test/: main.cpp
