cmake_minimum_required(VERSION 3.5)
project(glsl_helper VERSION 1.0.0 LANGUAGES C CXX)
set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

include(CTest)
enable_testing()
file(GLOB GLSL_HELPER_SOURCES src/*.cpp)
add_library(glsl ${GLSL_HELPER_SOURCES})
target_include_directories(glsl PRIVATE ${INCLUDE_DIR})
include_directories(${INCLUDE_DIR})
set(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} glsl)
include(CPack)
